<resources>
    <string name="app_name">Accountable</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collapsing_image">Collapsing Image</string>
    <string name="switch_between_folder_and_script_button">Switch Between Folder and Script Button</string>
    <string name="add_folder_or_script">Add Folder or Script</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_goal">Add Goal</string>
    <string name="update_folder">Update Folder</string>
    <string name="update_goal">Update Goal</string>
    <string name="choose_image">Choose Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="script_display_image">Script Display Image</string>
    <string name="folder_display_image">Folder Display Image</string>
    <string name="scripts_image_icon">Scripts Image Icon</string>
    <string name="folders_image_icon">Folders Image Icon</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="appearance">Appearance</string>
    <string name="main_display_image">Main Display Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="script">Script</string>
    <string name="enter_script_title">Enter Script Title</string>
    <string name="load_document">Load Document</string>
    <string name="edit_menu_floating_button">Edit Menu Floating Button</string>
    <string name="delete_menu_floating_button">Delete Menu Floating Button</string>
    <string name="cancel_menu_floating_button">Cancel Menu Floating Button</string>
    <string name="edit_script">Edit Script</string>
    <string name="preview_script">Preview Script</string>
    <string name="choose_markup_language">Choose Markup Language</string>
    <string name="change_markup_language">Change Markup Language: %s</string>
    <string name="opening">Opening:</string>
    <string name="closing">Closing:</string>
    <string name="pick_colour">Pick Colour</string>
    <string name="choose_a_colour">Choose a colour</string>
    <string name="cancel">Cancel</string>
    <string name="select_alignment">Select Alignment</string>
    <string name="align_center">Align Center</string>
    <string name="align_opposite">Align Opposite</string>
    <string name="align_normal">Align Normal</string>
    <string name="markup_language">Markup Language</string>
    <string name="change_markup_language_name">Change Markup Language Name</string>
    <string name="enter_markup_language_name">Enter Markup Language Name</string>
    <string name="warning">Warning!</string>
    <string name="remove_setting">Remove Setting</string>
    <string name="close">Close</string>
    <string name="no_setting">No Setting</string>
    <string name="name_is_not_unique">"Name Is Not Unique: %s"</string>
    <string name="open_teleprompter">Open Teleprompter</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="skip_back">Skip Back</string>
    <string name="play_pause">Play/Pause</string>
    <string name="skip_forward">Skip Forward</string>
    <string name="expand_retract_bottom_sheet">Expand/Retract Bottom Sheet</string>
    <string name="text_size">Text Size: %1$s</string>
    <string name="text_colour">Text Colour: %1$s</string>
    <string name="background_colour">Background Colour: %1$s</string>
    <string name="scroll_speed">Scroll Speed: %1$s</string>
    <string name="start_count_down">Start Count Down: %1$s Seconds</string>
    <string name="scroll_count_down">Scroll Count Down: %1$s Seconds</string>
    <string name="skip_size">Skip Size: %1$s Display Pixels</string>
    <string name="move_controls_to_top">Move Controls To Top</string>
    <string name="move_controls_to_bottom">Move Controls To Bottom</string>
    <string name="count_down_display_button">Count Down Display Button</string>
    <string name="character">Character:</string>
    <string name="special_character">Special Character</string>
    <string name="replace_with">Replace With:</string>
    <string name="replacement">Replacement</string>
    <string name="add_special_character">Add Special Character</string>
    <string name="change_name">Change Name</string>
    <string name="restore_default_settings">Restore Default Settings</string>
    <string name="default_settings">Default Settings</string>
    <string name="enter_teleprompter_setting_name">Enter Teleprompter Setting Name</string>
    <string name="new_markup_language">New Markup Language</string>
    <string name="name_is_not_allowed">Name \"%1$s\" Is Not Allowed</string>
    <string name="print_to_text_file">Print To Text File</string>
    <string name="home">Home</string>
    <string name="goals">Goals</string>
    <string name="books">Books</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="hundred_percent">100%</string>
    <string name="choose_category">Choose Category</string>
    <string name="show_all">Show All</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="DaysTillEnd">Completion Date</string>
    <string name="_25_september_2019">25 September 2019</string>
    <string name="DaysLeft">Days Left</string>
    <string name="_25">25</string>
    <string name="GoalInstructions">Please fill in the following information about your goal.
    Describe it in as much detail as possible.</string>
    <string name="Question1">What is your goal?</string>
    <string name="Question2">What do you really want?</string>
    <string name="Question3">What is important about it?</string>
    <string name="Question4">How will you get it?</string>
    <string name="Question5">What is preventing you from having it?</string>
    <string name="Question6">How will you know you are successful?</string>
    <string name="Question7">When do you want to achieve this goal?</string>
    <string name="Question8">Please insert a picture of what success would look like.</string>
    <string name="Answer1">My goal</string>
    <string name="Answer2">What I really want</string>
    <string name="Answer3">What is important about my goal</string>
    <string name="Answer4">How I am going to get to my goal</string>
    <string name="Answer5">Things preventing me from having my goal</string>
    <string name="Answer6">How I will know I am successful</string>
    <string name="Answer7">When I will achieve this goal</string>
    <string name="because">Because</string>
    <string name="goal_image">Goal Image</string>
    <string name="NewGoalTitle">New *GoalCategory* Goal</string>
    <string name="goal_hint">Enter Goal</string>
    <string name="goal_why_hint">Enter why you want to achieve this goal</string>
    <string name="goal_importance_hint">Enter what is important about this goal</string>
    <string name="goal_get_hint">Enter how you will achieve this goal</string>
    <string name="goal_preventing_hint">Enter what is preventing you from achieving this goal</string>
    <string name="goal_successful_hint">Enter how you will know you are successful</string>
    <string name="nothing"> </string>
    <string name="clickToEdit">Click to edit</string>
    <string name="Create">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="new_goal">New Goal</string>
    <string name="new_goal_value">New %1$s Goal</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="script_does_not_exist">Script does not exist.</string>
    <string name="change_entry_order">Change Entry Order</string>
    <string name="add_audios">Add Audios</string>
    <string name="add_videos">Add Videos</string>
    <string name="add_documents">Add Documents</string>
    <string name="add_script">Add Script</string>
    <string name="add_text">Add Text</string>
    <string name="add_at_cursor_point">Add At Cursor Point</string>
    <string name="add_below">Add Below</string>
    <string name="add_above">Add Above</string>
    <string name="play_button">Play Button</string>
    <string name="skip_forward_button">Skip Forward Button</string>
    <string name="skip_backward_button">Skip Backward Button</string>
    <string name="fullscreen_button">Fullscreen Button</string>
    <string name="close_video_button">Close Video Button</string>
    <string name="lock_button">Lock Button</string>
    <string name="current_duration">Current Duration</string>
    <string name="_23_23_23">23:23:23</string>
    <string name="total_duration">Total Duration</string>
    <string name="close_page">Close Page</string>
    <string name="script_description">Script Description</string>
    <string name="audio_description">Audio Description</string>
    <string name="document_description">Document Description</string>
    <string name="video_description">Video Description</string>
    <string name="image_description">Image Description</string>
    <string name="document">Document</string>
    <string name="delete_content">Delete %1$s?</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="backup">Backup</string>
    <string name="restore_from_downloads_backup_folder">Restore From Downloads Backup Folder</string>
    <string name="backup_data_to_folder">Backup Data To Folder</string>
    <string name="share">Share</string>
    <string name="add_time_stamp">Add Time Stamp</string>
    <string name="add_date_stamp">Add Date Stamp</string>
    <string name="case_string">Case</string>
    <string name="word">Word</string>
    <string name="scripts_and_occurrences">Scripts: %1$s Occurrences: %2$s</string>
    <string name="occurrences">Occurrences: %1$s</string>
    <string name="occurrences_multiple">Occurrences: %1$s/%2$s</string>
    <string name="move_right">Move Right</string>
    <string name="move_left">Move Left</string>
    <string name="no_text_shared">No Text Shared</string>
    <string name="audio_name">Audio Name</string>
    <string name="media_notification_channel">MediaNotification</string>
    <string name="media_notification_channel_description">MediaNotification</string>
    <string name="generic_error">error</string>
    <string name="error_media_not_found">media not found</string>
    <string name="album">Album: %1$s</string>
    <string name="video_name">Video Name</string>
    <string name="folder_image">Folder Image</string>
</resources>