<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/script_menu_share_script"
        android:orderInCategory="1"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/script_menu_open_teleprompter"
        android:orderInCategory="2"
        android:icon="@drawable/play_arrow"
        android:title="@string/open_teleprompter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/script_menu_edit_save_script"
        android:title="@string/preview_script"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/script_menu_image_item"
        android:title="@string/choose_image"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/script_menu_add_time_stamp"
        android:title="@string/add_time_stamp"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/script_menu_markup_language"
        android:title="@string/choose_markup_language"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/script_menu_add_document"
        android:title="@string/load_document"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/script_menu_print_to_text_file"
        android:title="@string/print_to_text_file"
        app:showAsAction="withText"/>
</menu>