<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:orderInCategory="1"
            android:title="@string/home"/>
        <item
            android:id="@+id/booksFragment"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:orderInCategory="3"
            android:title="@string/books"/>
        <item
            android:id="@+id/appSettingsFragment"
            android:icon="@drawable/settings_icon"
            android:orderInCategory="4"
            android:title="@string/settings"/>
    </group>
    <item android:title="@string/support"
        android:orderInCategory="6">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/helpFragment"
                    android:icon="@android:drawable/ic_menu_help"
                    android:orderInCategory="5"
                    android:title="@string/help"/>
            </group>
        </menu>
    </item>
</menu>