<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/media_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_text"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_pictures_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_pictures"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/add_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_audios_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_audios"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/add_pictures_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_videos_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_videos"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/add_audios_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_documents_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_documents"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/add_videos_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_script_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_script"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/add_documents_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:backgroundTint="@color/red"
                app:layout_constraintTop_toBottomOf="@id/add_script_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/position_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_above_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_above"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_at_cursor_point_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_at_cursor_point"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/add_above_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_below_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_below"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/add_at_cursor_point_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/delete_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/item_confirmation_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_confirmation_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/item_confirmation_preview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_confirmation_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/delete_confirmation_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>