<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="task"
            type="com.thando.accountable.database.tables.SpecialCharacters" />
        <variable
            name="viewLifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="4dp"
        app:cardElevation="30dp"
        app:contentPadding="1dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <TextView
                android:id="@+id/characterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:gravity="center"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/characterEditText"/>
            
            <EditText
                android:id="@+id/characterEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/characterTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textMultiLine"
                android:text="@={task.character}"
                android:autofillHints="@null"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintHorizontal_bias="0.5"
                android:hint="@string/special_character"/>

            <TextView
                android:id="@+id/errorMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterEditText"/>
            
            <TextView
                android:id="@+id/replaceWithTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace_with"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorMessageTextView"/>

            <EditText
                android:id="@+id/replaceWithEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@null"
                android:hint="@string/replacement"
                android:inputType="textMultiLine"
                android:text="@={task.editingAfterChar}"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/replaceWithTextView" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:onClick="@{()->task.delete(viewLifecycleOwner)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/replaceWithEditText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>