<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BooksFragment">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.thando.accountable.fragments.viewmodels.BooksViewModel" />
        <variable
            name="scriptAdapter"
            type="com.thando.accountable.recyclerviewadapters.ScriptItemAdapter" />
        <variable
            name="goalAdapter"
            type="com.thando.accountable.recyclerviewadapters.GoalItemAdapter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expanded="false"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:title="@{viewModel.folder.folderName.text?? viewModel.folderIsScripts()?@string/books:@string/goals}"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/topImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/collapsing_image"
                    android:scaleType="centerCrop"
                    android:src="@{viewModel.folder.getUri(context)??viewModel.appSettings.getUri(context)}"
                    app:layout_collapseMode="parallax" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/switchFolderScriptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/switch_between_folder_and_script_button"
            android:src="@{viewModel.showScripts.booleanValue()?@drawable/scripts_drawable:@drawable/folder_drawable}"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFolderScriptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="@{(viewModel.intentString!=null)?View.GONE:View.VISIBLE}"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_folder_or_script"
            android:src="@android:drawable/ic_input_add"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/folders_and_scripts_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adapter="@{viewModel.showScripts.booleanValue()?(viewModel.folderIsScripts()?scriptAdapter:goalAdapter):goalAdapter}"
            android:visibility="@{viewModel.listLoaded?View.VISIBLE:View.GONE}"
            android:enabled="@{viewModel.listLoaded?true:false}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>